--- a/extensions/admin-action-send-order-to-bydesign/package.json
+++ b/extensions/admin-action-send-order-to-bydesign/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "admin-action-test",
+  "name": "admin-action-send-order-to-bydesign",
   "private": true,
   "version": "1.0.0",
   "license": "UNLICENSED",
