--- a/extensions/payment-customizations-based-on-email/package.json
+++ b/extensions/payment-customizations-based-on-email/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bydesign-payment-hide",
+  "name": "payment-customizations-based-on-email",
   "version": "0.0.1",
   "license": "UNLICENSED",
   "scripts": {
