--- a/extensions/admin-action-send-order-to-bydesign/shopify.extension.toml
+++ b/extensions/admin-action-send-order-to-bydesign/shopify.extension.toml
@@ -3,7 +3,8 @@ api_version = "2025-04"
 [[extensions]]
 # Change the merchant-facing name of the extension in locales/en.default.json
 name = "t:name"
-handle = "admin-action-test"
+handle = "admin-action-send-order-to-bydesign"
+label = "Sync to ByDesign"
 type = "ui_extension"
 uid = "347fc165-4b43-8730-3309-766ef0e6f5ba2b929f9b"
 
