--- a/extensions/payment-customizations-based-on-email/shopify.extension.toml
+++ b/extensions/payment-customizations-based-on-email/shopify.extension.toml
@@ -1,8 +1,8 @@
 api_version = "2025-07"
 
 [[extensions]]
-name = "t:name"
-handle = "bydesign-payment-hide"
+name = "Payment Customization - Hide Payments for Reps / Anonymous Users"
+handle = "payment-customizations-based-on-email"
 type = "function"
 uid = "d36bd533-326e-7c82-5d86-279e3c23956a3abd5eb6"
 description = "t:description"
